# neat-rust-library

./: Cargo.toml  index.html  launch.sh
src/: layer.rs  lib.rs  mod.rs  network.rs  neuron.rs  synapse.rs
