[package]
name = "simple_2d_window"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"console",
	"Performance",
] }

[lib]
crate-type = ["cdylib", "rlib"]
